--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -14,3 +14,9 @@
 // @media screen and (min-width: 760px) {html{font-size:118.75px;}}
 // @media screen and (min-width: 800px) {html{font-size:125px;}}
 // @media screen and (min-width: 960px) {html{font-size:150px;}}
+@import './reset.css';
+@import './border.css';
+
+body{
+    font-size:16px;
+}
