--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -16,6 +16,7 @@
 // @media screen and (min-width: 960px) {html{font-size:150px;}}
 @import './reset.css';
 @import './border.css';
+@import './iconfont.css';
 
 body{
     font-size:16px;
