Optimization of style

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -17,7 +17,8 @@
 @import './reset.css';
 @import './border.css';
 @import './iconfont.css';
+@import './function.scss';
 
 body{
-    font-size:16px;
+    font-size:rem(14px);
 }
