--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -17,7 +17,7 @@
 @import './reset.css';
 @import './border.css';
 @import './iconfont.css';
-@import './function.scss';
+@import './global.scss';
 
 body{
     font-size:rem(14px);
